# trello-connect-flow-1

./: .env.production  .pre-commit-config.yaml  DEPLOYMENT_GUIDE.md  ENVIRONMENT_SETUP.md  PRODUCTION_DEPLOYMENT.md  README.md  copy-to-server.sh  deploy-local.sh  deploy-production-simple.sh  deploy-production.sh  deploy-server.sh  deploy-unified.sh  deploy.sh  deployment-setup.sh  docker-compose.prod.yml  docker-compose.proxy.yml  docker-compose.unified.yml  docker-compose.yml  env.example  generate-nginx-config.sh  index.html  nginx.conf  nginx.production.conf  pyproject.toml  setup-production.sh  tatus
backend/: .dockerignore  Dockerfile  app.py  app_factory.py  db.py  migrate_labels.py  requirements.txt  tasks.py  worker.py
backend/instance/: users.db
frontend/: Dockerfile  index.html  package.json  vite.config.ts
frontend/src/components/: GoogleAuthSection.tsx  TrelloConnectionSection.tsx  WebhookManagementSection.tsx
frontend/src/pages/: Index.tsx
instance/: users.db
migrations/versions/: 001_add_linked_board_and_labels.py
src/components/: GoogleAuthSection.tsx  TrelloConnectionSection.tsx  WebhookManagementSection.tsx
src/pages/: Index.tsx
