[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trello-connect-flow"
version = "0.1.0"
description = "Trello integration platform with automated workflows"
authors = [{name = "Norgay HR Consulting"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask==3.1.1",
    "Flask-Cors==6.0.1",
    "requests==2.32.4",
    "redis==6.2.0",
    "rq==2.4.0",
    "SQLAlchemy==2.0.41",
    "flask-sqlalchemy==3.1.1",
    "python-dotenv==1.1.1",
    "Flask-Migrate==4.1.0",
    "Flask-Login==0.6.3",
]

[project.optional-dependencies]
dev = [
    "black==24.2.0",
    "ruff==0.3.0",
    "mypy==1.8.0",
    "pytest==8.0.0",
    "pytest-cov==4.1.0",
    "pre-commit==3.6.0",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py310"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["B011"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=backend",
    "--cov-report=term-missing",
    "--cov-report=html",
]
